fix header and change hero wrap

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main>
-    <header class="header">
+    <header class="fixed-header">
       <div class="content">
         <nav class="navbar">
           <!-- Logo -->
@@ -31,10 +31,14 @@
           <!-- Action -->
           <div class="action">
             <a href="#!" class="action-link" style="
-  color: var(--primary-color)">Sign in</a>
+          color: var(--primary-color)">Sign in</a>
             <a href="#!" class="action-link btn">Sign up</a>
           </div>
         </nav>
+      </div>
+    </header>
+    <div class="hero-wrap">
+      <div class="content">
         <div class="hero">
           <div class="info">
             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -48,7 +52,7 @@
           <img src="./assets/img/hero-img.svg" alt="Welcome to Besnik Agency" class="hero-img">
         </div>
       </div>
-    </header>
+    </div>
 
     <!-- Client -->
     <div class="client">
