--- a/index.html
+++ b/index.html
@@ -14,43 +14,41 @@
 </head>
 
 <body>
-  <main>
-    <header class="fixed-header">
-      <div class="content">
-        <nav class="navbar">
-          <!-- Logo -->
-          <img src="./assets/img/logo.svg" alt="besnik." class="logo">
-          <!-- Nav -->
-          <ul class="nav-list">
-            <li><a href="#!" class="nav-item-link">Home</a></li>
-            <li><a href="#!" class="nav-item-link">Features</a></li>
-            <li><a href="#!" class="nav-item-link">Services</a></li>
-            <li><a href="#!" class="nav-item-link">Resources</a></li>
-            <li><a href="#!" class="nav-item-link">Contact</a></li>
-          </ul>
-          <!-- Action -->
-          <div class="action">
-            <a href="#!" class="action-link" style="
+  <header class="fixed-header">
+    <div class="content">
+      <nav class="navbar" id="home">
+        <!-- Logo -->
+        <a href="#home"><img src="./assets/img/logo.svg" alt="besnik." class="logo"></a>
+        <!-- Nav -->
+        <ul class="nav-list">
+          <li><a href="/" class="nav-item-link">Home</a></li>
+          <li><a href="#features" class="nav-item-link">Features</a></li>
+          <li><a href="#services" class="nav-item-link">Services</a></li>
+          <li><a href="#resources" class="nav-item-link">Resources</a></li>
+          <li><a href="#contact" class="nav-item-link">Contact</a></li>
+        </ul>
+        <!-- Action -->
+        <div class="action">
+          <a href="#!" class="action-link" style="
           color: var(--primary-color)">Sign in</a>
-            <a href="#!" class="action-link btn">Sign up</a>
-          </div>
-        </nav>
-      </div>
-    </header>
+          <a href="#!" class="action-link btn">Sign up</a>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <main>
     <div class="hero-wrap">
       <div class="content">
-        <div class="hero">
-          <div class="info">
-            <p class="sub-title">Welcome to Besnik Agency</p>
-            <h1 class="title">Discover a place you'll love to live.</h1>
-            <p class="desc">get the best real estate deals first, before they hit the mass market!
-              HOT FORECLOSURE DEALS with
-              one simple search.</p>
-            <!-- CTA Call to action -->
-            <a href="#!" class="btn hero-cta">More About Us</a>
-          </div>
-          <img src="./assets/img/hero-img.svg" alt="Welcome to Besnik Agency" class="hero-img">
+        <div class="info">
+          <p class="sub-title">Welcome to Besnik Agency</p>
+          <h1 class="title">Discover a place you'll love to live.</h1>
+          <p class="desc">get the best real estate deals first, before they hit the mass market!
+            HOT FORECLOSURE DEALS with
+            one simple search.</p>
+          <!-- CTA Call to action -->
+          <a href="#!" class="btn hero-cta">More About Us</a>
         </div>
+        <img src="./assets/img/hero-img.svg" alt="Welcome to Besnik Agency" class="hero-img">
       </div>
     </div>
 
@@ -92,7 +90,7 @@
     </div>
 
     <!-- Guides -->
-    <div class="guides">
+    <div class="guides" id="services">
       <div class="content">
         <h2 class="sub-title">How its works?</h2>
         <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all
@@ -129,7 +127,7 @@
     </div>
 
     <!-- Featured -->
-    <div class="featured">
+    <div class="featured" id="features">
       <div class="content">
         <header>
           <h2 class="sub-title">Featured Properties</h2>
@@ -202,7 +200,7 @@
         </div>
       </div>
     </div>
-    <div class="stats">
+    <div id="resources" class="stats">
       <div class="content">
         <div class="row">
           <div class="img-block">
@@ -282,7 +280,7 @@
     </div>
 
     <!-- Subscription -->
-    <div class="subscription">
+    <div id="contact" class="subscription">
       <div class="content">
         <div class="body">
           <div class="info">
@@ -295,64 +293,64 @@
       </div>
     </div>
 
-    <footer>
-      <div class="footer">
-        <div class="content">
-          <div class="row row-top">
-            <div class="column">
-              <h3 class="heading">Product</h3>
-              <ul class="list">
-                <li class="item"><a href="#!">Listing</a></li>
-                <li class="item"><a href="#!">Property</a></li>
-                <li class="item"><a href="#!">Agents</a></li>
-                <li class="item"><a href="#!">Blog</a></li>
-              </ul>
-            </div>
-            <div class="column">
-              <h3 class="heading">Resources</h3>
-              <ul class="list">
-                <li class="item"><a href="#!">Our Homes</a></li>
-                <li class="item"><a href="#!">Member Stories</a></li>
-                <li class="item"><a href="#!">Video</a></li>
-                <li class="item"><a href="#!">Free trial</a></li>
-              </ul>
-            </div>
-            <div class="column">
-              <h3 class="heading">Company</h3>
-              <ul class="list">
-                <li class="item"><a href="#!">Patnerships</a></li>
-                <li class="item"><a href="#!">Terms of use</a></li>
-                <li class="item"><a href="#!">Privacy</a></li>
-                <li class="item"><a href="#!">Sitemap</a></li>
-              </ul>
-            </div>
-
-            <!-- Get in touch column -->
-            <div class="column">
-              <h3 class="heading">Get in touch</h3>
-              <p class="desc">You’ll find your next home, in any style you prefer.</p>
-              <div class="social">
-                <a href="#!" class="social-link">
-                  <img src="./assets/img/facebook.svg" alt="facebook">
-                </a>
-                <a href="#!" class="social-link">
-                  <img src="./assets/img/twitter.svg" alt="twitter">
-                </a>
-                <a href="#!" class="social-link">
-                  <img src="./assets/img/linkedin.svg" alt="linkedin">
-                </a>
-              </div>
-            </div>
+  </main>
+  <footer>
+    <div class="footer">
+      <div class="content">
+        <div class="row row-top">
+          <div class="column">
+            <h3 class="heading">Product</h3>
+            <ul class="list">
+              <li class="item"><a href="#!">Listing</a></li>
+              <li class="item"><a href="#!">Property</a></li>
+              <li class="item"><a href="#!">Agents</a></li>
+              <li class="item"><a href="#!">Blog</a></li>
+            </ul>
           </div>
-          <div class="row row-bottom">
-            <img src="./assets/img/logo.svg" alt="Besnik" class="logo">
-            <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+          <div class="column">
+            <h3 class="heading">Resources</h3>
+            <ul class="list">
+              <li class="item"><a href="#!">Our Homes</a></li>
+              <li class="item"><a href="#!">Member Stories</a></li>
+              <li class="item"><a href="#!">Video</a></li>
+              <li class="item"><a href="#!">Free trial</a></li>
+            </ul>
+          </div>
+          <div class="column">
+            <h3 class="heading">Company</h3>
+            <ul class="list">
+              <li class="item"><a href="#!">Patnerships</a></li>
+              <li class="item"><a href="#!">Terms of use</a></li>
+              <li class="item"><a href="#!">Privacy</a></li>
+              <li class="item"><a href="#!">Sitemap</a></li>
+            </ul>
+          </div>
+
+          <!-- Get in touch column -->
+          <div class="column">
+            <h3 class="heading">Get in touch</h3>
+            <p class="desc">You’ll find your next home, in any style you prefer.</p>
+            <div class="social">
+              <a href="#!" class="social-link">
+                <img src="./assets/img/facebook.svg" alt="facebook">
+              </a>
+              <a href="#!" class="social-link">
+                <img src="./assets/img/twitter.svg" alt="twitter">
+              </a>
+              <a href="#!" class="social-link">
+                <img src="./assets/img/linkedin.svg" alt="linkedin">
+              </a>
+            </div>
           </div>
         </div>
+        <div class="row row-bottom">
+          <img src="./assets/img/logo.svg" alt="Besnik" class="logo">
+          <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+        </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
-  </main>
 </body>
 
 </html>
