--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#home"><img src="./assets/img/logo.svg" alt="besnik." class="logo"></a>
         <!-- Nav -->
         <ul class="nav-list">
-          <li><a href="/" class="nav-item-link">Home</a></li>
+          <li><a href="https://hieuvannguyen.github.io/F8-htmlcss-01" class="nav-item-link">Home</a></li>
           <li><a href="#features" class="nav-item-link">Features</a></li>
           <li><a href="#services" class="nav-item-link">Services</a></li>
           <li><a href="#resources" class="nav-item-link">Resources</a></li>
