basic completion responsive mobile

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
           <li><a href="#resources" class="nav-item-link">Resources</a></li>
           <li><a href="#contact" class="nav-item-link">Contact</a></li>
           <li>
-            <a href="#resources" class="nav-item-link nav-item-link--show-on-mobile">
+            <a href="#resources" class="nav-item-link show-on-mobile">
               Sign in
             </a>
           </li>
           <li>
-            <a href="#contact" class="nav-item-link nav-item-link--show-on-mobile">
+            <a href="#contact" class="nav-item-link show-on-mobile">
               Sign up
             </a>
           </li>
@@ -131,7 +131,7 @@
         </div>
         <div class="row row-desc">
           <p class="desc">More than 45,000+ companies trust besnik</p>
-          <p class="desc">5 Star Ratings (2k+ Review)</p>
+          <p class="desc hide-on-mobile">5 Star Ratings (2k+ Review)</p>
         </div>
         <div class="images">
           <a href="#!">
@@ -197,7 +197,7 @@
           <h2 class="sub-title">Featured Properties</h2>
           <div class="row">
             <p class="desc">Everything you need to know when you're looking</p>
-            <a href="#!" class="link">
+            <a href="#!" class="link hide-on-mobile">
               <span>View All Properties</span>
               <img src="./assets/img/vector.svg" alt="arrow" class="arrow">
             </a>
@@ -262,6 +262,10 @@
             </div>
           </div>
         </div>
+        <div class="featured-cta show-on-mobile">
+          <a href="#!" class="btn">View All Properties</a>
+        </div>
+
       </div>
     </div>
     <div id="resources" class="stats">
